# cpp_use_sharelib_genera_exec

./: CMakeLists.txt  README.md  bui.bash  main.cpp  test_ddmo
include/: test.h
